--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
+/* title */
+.title {
+  font-size: 60px;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #cba2ff;
   text-align: center;
+  margin: 0px;
+}
+.title-color {
+  color: #cba2ff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+/* max width 991px */
+@media screen and (max-width: 991px) {
+  /* title */
+  .title {
+    font-size: 40px;
   }
 }
